--- a/block-BHaaak/about.html
+++ b/block-BHaaak/about.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Simple Blog Template</title>
+    <title>Simple Blog Template - About</title>
     <link rel="stylesheet" href="./assets/stylesheet/style.css" />
   </head>
   <body id="top">
     <header>
-      <h1>List of Articles</h1>
+      <h1>List of Articles - About</h1>
       <nav>
         <ul>
-          <li><a href="./about.html">About</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./contact.html">Contact</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="https://google.com" target="_blank">Google</a></li>
@@ -21,10 +21,9 @@
       <section>
         <article>
           <h2>Lorem ipsum dolor sit.</h2>
-          <img src="./assets/media/image2.jpg" alt="" width="500" />
+          <img src="./assets/media/image1.jpg" alt="" width="500" />
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat,
-            maiores.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto ipsum provident nisi laudantium ut, vel eius aliquid molestias fugit amet consequatur cum fuga minus. Itaque ut sit laboriosam quam perferendis, excepturi molestiae ducimus cum nobis, unde suscipit qui saepe placeat sed modi quisquam fuga consequatur aut iure voluptatem, esse repudiandae sapiente. Velit ratione doloremque nulla tempora reiciendis corrupti earum libero eaque temporibus facilis! Voluptatibus excepturi maiores quaerat voluptatum cumque distinctio dolor consequatur voluptatem neque tempora veritatis officia laborum quis nihil, animi facilis non provident accusantium odit debitis? Nesciunt, quidem ipsam voluptate deleniti impedit culpa. A maxime dolore quo est. Molestias.
           </p>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at
@@ -38,18 +37,12 @@
             consequuntur saepe deserunt cum culpa perferendis minus quidem velit
             commodi in quibusdam corporis, neque voluptates odio vitae eos est
             porro ipsam laborum quis eligendi distinctio fugit modi?
-            Voluptatibus minima exercitationem, mollitia reprehenderit
-            accusantium ducimus alias quae dolorem fugit, sit accusamus quisquam
-            officia, excepturi doloremque molestiae aliquid earum. Sapiente eos
-            rerum debitis?
           </p>
           <h3>Lorem, ipsum.</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab labore
             magni earum delectus libero voluptate in sint, exercitationem
-            perferendis dolor ipsum natus harum ducimus, laudantium facilis
-            reiciendis eaque placeat debitis non quod hic? Aliquid esse sunt
-            molestiae quia, beatae nam?
+            perferendis dolor ipsum natus harum ducimus.
           </p>
           <h3>Lorem ipsum dolor sit.</h3>
           <p>
