--- a/block-BHaaak/contact.html
+++ b/block-BHaaak/contact.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Simple Blog Template</title>
+    <title>Simple Blog Template - Contact</title>
     <link rel="stylesheet" href="./assets/stylesheet/style.css" />
   </head>
   <body id="top">
     <header>
-      <h1>List of Articles</h1>
+      <h1>List of Articles - Contact</h1>
       <nav>
         <ul>
           <li><a href="./about.html">About</a></li>
-          <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="https://google.com" target="_blank">Google</a></li>
         </ul>
