add 3 pages with css reset

--- a/block-BHaaam/projects.html
+++ b/block-BHaaam/projects.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Superweb</title>
+    <title>Project @Superweb</title>
     <link rel="stylesheet" href="./assets/stylesheet/style.css" />
   </head>
-  <body class="home">
+  <body class="projects">
     <header>
-      <h1>SuperWeb</h1>
+      <h1>Projects</h1>
       <nav>
         <ul>
-          <li><a href="./projects.html">Projects</a></li>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./services.html">Services</a></li>
         </ul>
       </nav>
@@ -18,7 +18,7 @@
     <main>
       <section>
         <article>
-          <h2>Full Stack Developer for Businesses</h2>
+          <h2>Full Stack MERN application</h2>
           <img src="./assets/media/img1.jpg" alt="laptop with USP" />
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem
@@ -30,7 +30,7 @@
       </section>
       <section>
         <article>
-          <h2>Experience of 10+ years</h2>
+          <h2>Ecommerce App</h2>
           <img src="./assets/media/img2.jpg" alt="work station" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem
