--- a/block-BHaaam/services.html
+++ b/block-BHaaam/services.html
@@ -2,23 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Superweb</title>
+    <title>Services @Superweb</title>
     <link rel="stylesheet" href="./assets/stylesheet/style.css" />
   </head>
-  <body class="home">
+  <body class="services">
     <header>
-      <h1>SuperWeb</h1>
+      <h1>Services</h1>
       <nav>
         <ul>
+          <li><a href="./index.html">Home</a></li>
           <li><a href="./projects.html">Projects</a></li>
-          <li><a href="./services.html">Services</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
         <article>
-          <h2>Full Stack Developer for Businesses</h2>
+          <h2>Application Development</h2>
           <img src="./assets/media/img1.jpg" alt="laptop with USP" />
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem
@@ -30,7 +30,7 @@
       </section>
       <section>
         <article>
-          <h2>Experience of 10+ years</h2>
+          <h2>Product Management</h2>
           <img src="./assets/media/img2.jpg" alt="work station" />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rem
