--- a/block-BHaaan/index.html
+++ b/block-BHaaan/index.html
@@ -1,20 +1,79 @@
-<!---
-
-### Create a blog page having 2 articles.
-
-#### TODO 🚀:
-
-1. Create a blog page having 2 articles.
-2. The sample structure of a page has been shown below.
-
----
-
-![alt text](https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/html-css/ex3.png)
-
----
-
-- Using a CSS reset is necessary.
-
-- Use appropriate semantic tags and keep the nesting and indentation clean.
-
--->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Blogger's Blog</title>
+    <link rel="stylesheet" href="./assets/stylesheets/style.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <nav>
+          <ul>
+            <li><a class="caps blue" href="./index.html">Home</a></li>
+            <li><a class="caps blue" href="./about.html">About</a></li>
+            <li><a class="caps blue" href="./blog.html">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <article>
+          <h5 class="caps blue loose blog-date">November 25 2015</h5>
+          <img
+            class="blog-img"
+            src="./assets/media/cat.jpg"
+            alt="a black and white cat"
+          />
+          <h2 class="blog-title">This is my first Article</h2>
+          <p class="blog-para">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
+            harum enim reprehenderit eius, quisquam et! Nobis accusantium
+            tenetur pariatur vel. Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Itaque harum enim reprehenderit eius, quisquam et!
+            Nobis accusantium tenetur pariatur vel.
+          </p>
+          <p class="blog-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
+            necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Obcaecati, necessitatibus?
+          </p>
+          <p class="blog-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+            perferendis, reiciendis nobis officia atque in.
+          </p>
+          <a class="caps blue blog-link" href="#">Read more</a>
+          <hr />
+        </article>
+        <article>
+          <h5 class="caps blue loose blog-date">November 25 2015</h5>
+          <img src="./assets/media/puppies.jpg" alt="a black and white cat" />
+          <h2 class="blog-title">This is my another Article</h2>
+          <p class="blog-para">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque
+            harum enim reprehenderit eius, quisquam et! Nobis accusantium
+            tenetur pariatur vel. Lorem ipsum dolor sit, amet consectetur
+            adipisicing elit. Itaque harum enim reprehenderit eius, quisquam et!
+            Nobis accusantium tenetur pariatur vel.
+          </p>
+          <p class="blog-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
+            necessitatibus? Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Obcaecati, necessitatibus?
+          </p>
+          <p class="blog-para">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+            perferendis, reiciendis nobis officia atque in.
+          </p>
+          <a class="caps blue blog-link" href="#">Read more</a>
+        </article>
+      </div>
+    </main>
+    <footer>
+      <div class="container">
+        <p>&copy;AltCampus 2022</p>
+      </div>
+    </footer>
+  </body>
+</html>
