--- a/block-BHaaak/index.html
+++ b/block-BHaaak/index.html
@@ -8,6 +8,7 @@
     <header>
       <h1>List of Article</h1>
       <nav>
+        <a href=".">Home</a>
         <a href="./about.html">About</a>
         <a href="./contact.html">Contact</a>
         <a href="#">Services</a>
@@ -18,6 +19,11 @@
       <section>
         <article>
           <h2>Lorem, ipsum dolor.</h2>
+          <img
+            src="./assets/media/image1.jpg"
+            alt="Table full of snacks"
+            height="400"
+          />
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus
             rerum voluptatem saepe iste fugiat eaque, impedit hic similique, quo
