Remove and replace code for repractice

--- a/block-BHaaam/about.html
+++ b/block-BHaaam/about.html
@@ -8,8 +8,8 @@
     <header>
       <h1>List of Article</h1>
       <nav>
-        <a href=".">Home</a>
-        <a href="./about.html">About</a>
+        <a href="./index.html">Home</a>
+        <a href=".">About</a>
         <a href="./contact.html">Contact</a>
         <a href="#">Services</a>
         <a href="https://www.google.com">Google</a>
@@ -20,8 +20,8 @@
         <article>
           <h2>Lorem, ipsum dolor.</h2>
           <img
-            src="./assets/media/image1.jpg"
-            alt="Table full of snacks"
+            src="./assets/media/image3.jpg"
+            alt="Dark green Field with red flowers"
             height="400"
           />
           <p>
