--- a/block-BHaaan/old-sol/index.html
+++ b/block-BHaaan/old-sol/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Blogger's Blog</title>
-    <link rel="stylesheet" href="./assets/stylesheets/style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
